# customer-agent-agno

./: .env.example  .gitignore  CLAUDE.md  Customer_Agent_Blog.md  Dockerfile  LICENSE  README.md  add_edit_method.py  add_excel_support.py  alembic.ini  app.py  config.json.example  config.py  create_app_icon.py  create_icns.py  docker-compose.yml  ecosystem.config.js  pyproject.toml  test_kb_diagnose.py  启动 AI 客服.command
Message/: __init__.py  ai_queue_load.py  handler_chain_factory.py  keyword_reload.py
alembic/: env.py
core/: app_metrics.py  chat_sync.py  di_container.py  health_server.py  human_assist_bus.py  human_assist_ui.py  lifecycle_cleanup.py  ops_telemetry.py  production_services.py  schedule_utils.py  service_providers.py  session_idle_closer.py
database/: chat_persist.py  connection_pool.py  db_manager.py  models.py  ops_migrate.py  ops_models.py  ops_repository.py  schema_migrations.py
docs/: 代码架构说明.md  售后代申请开发说明.md  小白使用说明.md  拼多多退换货卡片-可行性调研.md  生产部署说明.md
scripts/: backup_db.py  benchmark_llm_api.py  build_exe.py  customer-agent.service  db_migrate.py  install_windows_service.bat  mms_full_field_probe.py  ocr_summarize.py  ocr_utils.py  probe_mms_apis.py  qrcode_refresh_cookies.py  quality_gate.py  smoke_test_all.py  sync_goods_to_kb.py  test_after_sales_card_live.py  uninstall_windows_service.bat
test/: conftest.py  test_address_change_audit.py  test_address_change_policy.py  test_address_parse.py  test_after_sales_apply_handler.py  test_after_sales_policy.py  test_ai_handler_async.py  test_ai_human_escalation.py  test_ai_mode_check.py  test_ai_queue_load.py  test_ai_reply_watchdog.py  test_ask_refund_card_messages.py  test_backup_db.py  test_buyer_burst_merge.py  test_buyer_lock_registry.py  test_channel_send.py  test_config_startup.py  (+33 more)
(+126 files in other folders)
