[project]
name = "agent-customer"
version = "1.1.0"
description = "电商AI客服"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.52.0",
    "websockets>=10.4",
    "requests>=2.28.0",
    "pyqt6>=6.9.0",
    "lancedb>=0.25.0",
    "pydantic>=2.5.0",
    "pyqt6-fluent-widgets>=1.9.0",
    "sqlalchemy>=2.0.43",
    "openai>=1.109.1",
    "agno>=2.3.4",
    "pillow>=12.0.0",
    "tantivy>=0.25.1",
    "aiofiles>=25.1.0",
    "pandas>=2.1.0,<2.3.0",
    "numpy>=1.24.0,<2.0.0",
    "loguru>=0.7.0",
    "pypdf",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "volcengine>=1.0.209",
    "aiohttp>=3.13.2",
    "python-dotenv>=1.0.0",
    "passlib>=1.7.4",
    "cryptography>=43.0.0",
    "xlrd>=2.0.2",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
security = [
    "keyring>=25.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]
ocr = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Agent", "Channel", "Message", "bridge", "core", "database", "ui", "utils", "scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pip-audit>=2.7.0",
]

[tool.coverage.run]
branch = true
source = ["utils", "database", "Message", "bridge", "core"]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
